# Dobby

./: .gitignore  .gitmodules  .lgtm.yml  AI__MD5_8h_source.html  AnonymousFile_8h_source.html  AppInfrastructure_2IpcService_2include_2IIpcService_8h_source.html  AppInfrastructure_2IpcService_2include_2IpcFileDescriptor_8h_source.html  AppServicesRdkPlugin_8h_source.html  AsyncReplyGetter_8h_source.html  AsyncReplySender_8h_source.html  BaseService_8h_source.html  BridgeInterface_8h_source.html  CMakeLists.txt  CONTRIBUTING.md  ConditionVariable_8h_source.html  ContainerIdMock_8h_source.html  ContainerId_8h_source.html  DaemonDobbyManagerTest_8h_source.html  DbusConnection_8h_source.html  DbusEventDispatcher_8h_source.html  DbusInterfaceWhiteList_8h_source.html  DbusMessageParser_8h_source.html  DbusTimeouts_8h_source.html  DbusUserIdSenderIdCache_8h_source.html  DbusWatches_8h_source.html  DeviceMapper_8h_source.html  DnsmasqSetup_8h_source.html  DobbyAsync_8h_source.html  DobbyBundleConfigMock_8h_source.html  DobbyBundleConfig_8h_source.html  DobbyBundleMock_8h_source.html  DobbyBundle_8h_source.html  DobbyConfig.cmake.in  DobbyConfigMock_8h_source.html  DobbyConfigVersion.cmake.in  DobbyConfig_8h_source.html  DobbyContainerMock_8h_source.html  DobbyContainer_8h_source.html  DobbyEnvMock_8h_source.html  DobbyEnv_8h_source.html  (+2007 more)
AppInfrastructure/Common/: CMakeLists.txt
AppInfrastructure/Common/include/: AI_MD5.h  ConditionVariable.h  FileUtilities.h  IDGenerator.h  IPollLoop.h  Mutex.h  PollLoop.h  SpinLock.h  ThreadedDispatcher.h  Timer.h
AppInfrastructure/Common/source/: AI_MD5.c  FileUtilities.cpp  PollLoop.cpp  ThreadedDispatcher.cpp  Timer.cpp
AppInfrastructure/Common/test/: CMakeLists.txt  Makefile
AppInfrastructure/IpcService/: CMakeLists.txt
AppInfrastructure/IpcService/include/: BaseService.h  IDbusPackageEntitlements.h  IDbusUserIdSenderIdCache.h  IIpcService.h  IpcCommon.h  IpcFactory.h  IpcFileDescriptor.h  IpcVariantList.h
AppInfrastructure/IpcService/test/: CMakeLists.txt  Makefile
AppInfrastructure/Logging/: CMakeLists.txt
AppInfrastructure/Logging/include/: Logging.h
AppInfrastructure/Logging/source/: Logging.cpp
client/lib/: CMakeLists.txt
client/lib/include/: DobbyFactory.h  DobbyProxy.h
client/lib/source/: DobbyFactory.cpp  DobbyProxy.cpp  Upstart.cpp  Upstart.h
client/tool/: CMakeLists.txt
client/tool/source/: Main.cpp
daemon/init/: CMakeLists.txt
daemon/init/source/: InitMain.cpp
daemon/lib/: CMakeLists.txt
daemon/lib/include/: Dobby.h  DobbyLogger.h  IDobbyPlugin.h  IDobbyStartState.h
daemon/lib/source/: Dobby.cpp  DobbyAsync.cpp  DobbyAsync.h  DobbyContainer.cpp  DobbyContainer.h  DobbyEnv.cpp  DobbyEnv.h  DobbyHibernate.cpp  DobbyHibernate.h  DobbyLegacyPluginManager.cpp  DobbyLegacyPluginManager.h  DobbyLogRelay.cpp  DobbyLogRelay.h  DobbyLogger.cpp  DobbyLogger.h  DobbyManager.cpp  DobbyManager.h  DobbyPluginManager.cpp  DobbyPluginManager.h  DobbyRunC.cpp  DobbyRunC.h  DobbyStartState.cpp  DobbyStartState.h  DobbyState.cpp  DobbyState.h  DobbyStats.cpp  DobbyStats.h  DobbyStream.cpp  DobbyStream.h  DobbyWorkQueue.cpp  DobbyWorkQueue.h  IDobbySysHook.h
daemon/process/: CMakeLists.txt  dobby.service  dobby.service.in  exported.syms  rdk-dobby.service  sky-dobby.service
daemon/process/settings/: dobby.dev_vm.json  dobby.json  dobby.llama.json  dobby.xi1.json  dobby.xi6.json  merge_settings.py
daemon/process/source/: Main.cpp
gtest/DobbyUtilsTest/: CMakeLists.txt
gtest/DobbyUtilsTest/tests/: ContainerIdTest.cpp  DobbyTimerTests.cpp  DobbyTimerTests.cpp\  DobbyUtilsTest.cpp
ipcUtils/: CMakeLists.txt
ipcUtils/include/: DobbyIPCUtils.h  DobbyIpcBus.h  IDobbyIPCUtils.h
ipcUtils/source/: DobbyIPCUtils.cpp  DobbyIpcBus.cpp
pluginLauncher/lib/: CMakeLists.txt
pluginLauncher/lib/include/: DobbyRdkPluginManager.h  DobbyRdkPluginUtils.h  IDobbyRdkLoggingPlugin.h  IDobbyRdkPlugin.h
pluginLauncher/lib/source/: DobbyRdkPluginDependencySolver.cpp  DobbyRdkPluginDependencySolver.h  DobbyRdkPluginManager.cpp  DobbyRdkPluginUtils.cpp
pluginLauncher/tool/: CMakeLists.txt  exported.syms
pluginLauncher/tool/source/: Main.cpp
plugins/AppServices/: CMakeLists.txt
plugins/AppServices/source/: AppServicesPlugin.cpp  AppServicesPlugin.h
plugins/Common/: CMakeLists.txt
plugins/Common/include/: PluginBase.h  ServiceMonitor.h
plugins/Common/source/: ServiceMonitor.cpp
plugins/EthanLog/: CMakeLists.txt
plugins/EthanLog/client/: CMakeLists.txt  ethanlog.c  ethanlog.h
plugins/EthanLog/source/: EthanLogClient.cpp  EthanLogClient.h  EthanLogLoop.cpp  EthanLogLoop.h  EthanLogPlugin.cpp  EthanLogPlugin.h
plugins/HolePuncher/: CMakeLists.txt
plugins/HolePuncher/source/: HolePuncherPlugin.cpp  HolePuncherPlugin.h
plugins/Perfetto/: CMakeLists.txt
plugins/Perfetto/source/: PerfettoPlugin.cpp  PerfettoPlugin.h
rdkPlugins/AppServices/: CMakeLists.txt
rdkPlugins/AppServices/source/: AppServicesRdkPlugin.cpp  AppServicesRdkPlugin.h
rdkPlugins/Common/: CMakeLists.txt
rdkPlugins/Common/include/: DobbyLoggerBase.h  DobbyNetworkingConstants.h  DobbyRdkPluginProxy.h  IpTablesRuleGenerator.h  LoopMountDetails.h  MappedId.h  RdkPluginBase.h
rdkPlugins/Common/source/: DobbyRdkPluginProxy.cpp  LoopMountDetails.cpp  MappedId.cpp
rdkPlugins/Gamepad/: CMakeLists.txt  README.md
rdkPlugins/Gamepad/source/: GamepadPlugin.cpp  GamepadPlugin.h
rdkPlugins/Logging/: CMakeLists.txt  LogRelay.md  README.md
rdkPlugins/Logging/include/: ILoggingSink.h
rdkPlugins/Networking/: CMakeLists.txt  README.md
rdkPlugins/Thunder/: CMakeLists.txt  README.md
tracing/: CMakeLists.txt
tracing/include/: DobbyTraceCategories.h  PerfettoTracing.h
tracing/source/: PerfettoTracing.cpp  PerfettoTracingSingleton.cpp  PerfettoTracingSingleton.h
unit_tests/L1_testing/: CMakeLists.txt  README.md
utils/: CMakeLists.txt
utils/include/: ContainerId.h  DobbyFileAccessFixer.h  DobbyUtils.h  IDobbyEnv.h  IDobbyUtils.h
utils/source/: ContainerId.cpp  DobbyFileAccessFixer.cpp  DobbyTimer.cpp  DobbyTimer.h  DobbyUtils.cpp
(+609 files in other folders)
